2009-08-19  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/farm.rb: Do not cache Site objects.
	* lib/qwik/act-monitor.rb: Comment outed some tests.
	* lib/qwik/act-wema.rb: Ditto.
	* lib/qwik/act-rrefs.rb: Ditto.

	* lib/qwik/check-many-pages.rb: Update.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/check-many-pages.rb: Check performance for many pages.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/site.rb: Add require "site-search".
	* lib/qwik/util-webrick.rb: Fix test.
	* lib/qwik/site-member.rb: Ditto.

2009-07-26  Kouichirou Eto  <2009@eto.com.nospam.com>

	* lib/qwik/check-htree-rexml.rb: Delete tests for deprecated method.

2008-12-08  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/catalog-ja.rb, lib/qwik/catalog-ml-ja.rb, and other related files:
	Correct some English messages.
	* lib/qwik/site-search.rb: Ignore a line which start with `#' in searching.

2008-12-01  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/page-get.rb: Fix bug: Ignore line start with ``#'' in
	super_pre and comment plugin.

2008-11-13  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/mail-body.rb, lib/qwik/mail-header.rb,
	lib/qwik/test-submit-japanese.rb: Fix garbling mail sent from
	AppleMail; "Content-Type: text/plain;charset=CP932" in header section.

2008-11-13  Keiki Shimada  <shimada-k aist.go.jp>

	* revert last commit to get to work on some more minor changes.

2008-10-30  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/act-getpass.rb, lib/qwik/act-httpauth.rb
	lib/qwik/act-login.rb, lib/qwik/act-ring.rb, lib/qwik/catalog-ja.rb
	lib/qwik/common-basic.rb, lib/qwik/password.rb, lib/qwik/qwik-service.rb
	lib/qwik/test-module-session.rb: Generate random password for each user.

2008-10-21  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/act-wema.rb: require login when edit wema.

2008-10-16  Keiki Shimada  <shimada-k aist.go.jp>

	* lib/qwik/farm.rb, lib/qwik/site-group, lib/qwikdb-filesystem.rb,